--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI/CD - Weather Station
 
 on:
   push:
-    branches: ["main"]      
+    branches: ["main"]
   pull_request:
-    branches: ["main"]      
+    branches: ["main"]
 
 jobs:
   lint:
@@ -12,16 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
-      - name: Install ruff
-        run: pip install ruff
-
-      - name: Run ruff (limit to stations/)
-        run: ruff check mqtt-weather-project/stations --output-format=github
+      - run: pip install ruff
+      - name: Run ruff
+        run: ruff check stations --output-format=github  
 
   test:
     name: Tests (pytest) on stations/
@@ -29,19 +25,16 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - name: Install deps
-        working-directory: mqtt-weather-project/stations
+        working-directory: stations                       
         run: |
           python -m pip install --upgrade pip
           pip install paho-mqtt pytest
-
       - name: Run pytest
-        working-directory: mqtt-weather-project/stations
+        working-directory: stations                      
         env:
           DISABLE_MQTT: "1"
         run: pytest -q
@@ -50,18 +43,15 @@ jobs:
     name: Build & Push Docker image (stations/)
     runs-on: ubuntu-latest
     needs: test
-    if: github.event_name == 'push'    
+    if: github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
-
       - uses: docker/setup-buildx-action@v3
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Extract Docker metadata (tags, labels)
         id: meta
         uses: docker/metadata-action@v5
@@ -71,12 +61,11 @@ jobs:
             type=raw,value=latest
             type=ref,event=branch
             type=sha,format=long
-
       - name: Build and push (context stations/)
         uses: docker/build-push-action@v6
         with:
-          context: mqtt-weather-project/stations
-          file: mqtt-weather-project/stations/Dockerfile
+          context: stations                             
+          file: stations/Dockerfile                    
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
