CI: set PYTHONPATH for pytest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
         working-directory: stations                      
         env:
           DISABLE_MQTT: "1"
+          PYTHONPATH: .
         run: pytest -q
 
   docker:
